# automated-planning-assignment

./: README.md
Problem1/: README.md  domain1.pddl  problem1.pddl  sas_plan  sas_plan_lamafirst
Problem2/: README.md  domain2.pddl  problem2.pddl  sas_plan_astar_lmcut  sas_plan_lamafirst
Problem3/: PANDA_out  README.md  domain3.hddl  out_plan  problem3.hddl
Problem4/: README.md  domain4.pddl  optic_out  problem4.pddl  tfd_out
Problem5/: README.md  bt.xml  plan
Problem5/plansys2_assignment/: CMakeLists.txt  README.md  package.xml
Problem5/plansys2_assignment/launch/: commands  plansys2_assignment_launch.py
Problem5/plansys2_assignment/pddl/: commands.pddl  domain.pddl
Problem5/plansys2_assignment/src/: empty_action_node.cpp  fill_action_node.cpp  load_empty_action_node.cpp  load_filled_action_node.cpp  move_carrier_to_warehouse_action_node.cpp  move_carrier_to_workstations_action_node.cpp  move_to_carrier_action_node.cpp  unload_empty_action_node.cpp  unload_filled_action_node.cpp
